ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: Rohit_dumb_hai
spec:
  rules:
    http:
      paths:
        backend:
          serviceName: wear-service
          servicePort: 8080 
        path: /wear  
        pathType: ImplemenationSpecific
        backend:
          serviceName: video-service
          servicePort: 8080
        path: /stream
        pathType: ImplemenationSpecific
